[package]
name = "ari"
version  = "0.0.1"
authors  = ["ari <ari@sent.com>"]
description  = "ari. the extras library."

edition  = "2018"

documentation = "https://docs.rs/ari"
license  = "MIT/Apache-2.0"

keywords = []
categories = []

[dependencies]
num-traits = "0.2.11"
parking_lot  = { version = "0.10.0", features = ["nightly"] }
rand = "0.7.3"
ring = "0.16.11"
unicode-width = "0.1.7"
winapi = { version = "0.3.8", features = ["std", "consoleapi", "dwmapi", "processenv", "unknwnbase", "sysinfoapi"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.61"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
